...
            android:layout_height="50dp"
            android:layout_weight="3"
            android:entries="@array/sortings"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/button_sort"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/sort" />
    </LinearLayout>

...
